<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.m2dl.mobebmp.mobe_catapulte.ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scoreTitle"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:text="@string/scoreTitle"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scoreUserName" />

            <TextView
                android:id="@+id/scoreUserScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scoreUserScore" />
        </LinearLayout>

        <ListView
            android:id="@+id/scoreListeRecords"
            android:layout_width="match_parent"
            android:layout_height="342dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boutonReplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goToGame"
                android:text="@string/scoreReplay" />

            <Button
                android:id="@+id/boutonHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goToHome"
                android:text="@string/scoreHome" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
