<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.m2dl.mobebmp.mobe_catapulte.GameActivity">

    <ProgressBar
        android:id="@+id/progress_bar_game_activity"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/home_button_game_activity"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:onClick="goToHome"
        android:text="@string/home_button_game_activity"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/stop_button_game_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:onClick="goToresult"
        android:text="@string/stop_button_game_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pause_button_game_activity"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pause_button_game_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="169dp"
        android:layout_marginTop="16dp"
        android:text="@string/pause_button_game_activity"
        app:layout_constraintEnd_toStartOf="@+id/stop_button_game_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_text_view_game_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_game_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score_text_view_game_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/score_game_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view_game_activity" />

</android.support.constraint.ConstraintLayout>
